# rmtree

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
rmtree/: debug.py  file.py  main.py
rmtree/struct/: content.py  file.py  metadata.py  page.py
src/: File.py  main.py
