[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rmtree", "rmtree.struct"]

[project]
name = "rmtree"
version = "1.0.4"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

description = "Convert the file tree from the reMarkable tablet to PDFs"
authors = [{ name = "Seb-sti1", email = "noreply@kerbourch.fr" }]
dependencies = [
    "fpdf2",
    "pypdf",
    "cairosvg",
    "rmc@git+https://github.com/Seb-sti1/rmc.git@bdb353feff968c9061fd4232699e58e95d4429db",
    "rmscene",
    "tqdm",
]


[project.scripts]
rmtree = "rmtree.main:main"
