[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rmtree", "rmtree.struct"]

[project]
name = "rmtree"
version = "1.0.5"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

description = "Convert the file tree from the reMarkable tablet to PDFs"
authors = [{ name = "Seb-sti1", email = "noreply@kerbourch.fr" }]
dependencies = [
    "fpdf2",
    "pypdf",
    "cairosvg",
    "rmc>=0.2.0,<0.3.0",
    "rmscene>=0.6.1,<0.7.0",
    "tqdm",
]


[project.scripts]
rmtree = "rmtree.main:main"
